# course5

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp  readme.md  todo.md
project/: readme.md  todo.md
project/include/: app.hpp  application_core.hpp  config.hpp  line.hpp  lite_tetrahedron.hpp  object2d.hpp  object3d_accretion_disk.hpp  object3d_base.hpp  object3d_roche_lobe.hpp  object3d_sphere.hpp  plane.hpp  tetra.hpp
project/src/: app.cpp  application_core.cpp  line.cpp  lite_tetrahedron.cpp  main.cpp  object2d.cpp  object3d_accretion_disk.cpp  object3d_base.cpp  object3d_roche_lobe.cpp  object3d_sphere.cpp  plane.cpp  tetra.cpp
utility/: create_video.sh  crop.py  rotate_traces.py  screen.py
